--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<ul class="nav pull-right">
 				<li><a id="top_cash_off" href="index.html#cashoff" rel="popover" data-placement="bottom" data-content="Click here if so (you can cancel or delete the report at any time)" data-original-title="Ready to run and end-of-shift report?">Cash Off</a></li>
 
-				<li><a href="index.html#notifications">Notifications&nbsp;<span class="badge badge-info">8</span></a></li>
+				<li><a data-toggle="modal" href="#notifications">Notifications&nbsp;<span class="badge badge-info">4</span></a></li>
 				<li class="divider-vertical"></li>
 				<li class="dropdown">
 				  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <b class="caret"></b></a>
@@ -76,7 +76,7 @@
 		<p>Use this document as a way to quick start any new project.<br> All you get is this message and a barebones HTML document.</p>
 		<div class="alert">
 			<button class="close" data-dismiss="alert">×</button>
-			<p>You've missed a scheduled end-of-shift cash off!</p>
+			<p>You've missed a scheduled end-of-shift cash off</p>
 			<button class="btn btn-warning">Cash off now</button>
 		</div>
 		
@@ -113,6 +113,38 @@
       </footer>
 
     </div> <!-- /container -->
+	
+	<div class="modal hide" id="notifications">
+	  <div class="modal-header">
+		<button type="button" class="close" data-dismiss="modal">×</button>
+		<h3>Here's your notifications</h3>
+	  </div>
+	  <div class="modal-body">
+		<div class="alert">
+			<button class="close" data-dismiss="alert">×</button>
+			<p>You've missed a scheduled end-of-shift cash off</p>
+			<button class="btn btn-warning">Cash off now</button>
+		</div>
+		<div class="alert">
+			<button class="close" data-dismiss="alert">×</button>
+			<p>Next weeks rota is due today</p>
+			<button class="btn btn-warning">Make rota now</button>
+		</div>
+		<div class="alert alert-info">
+			<button class="close" data-dismiss="alert">×</button>
+			<p>Reminder to settle papers from petty cash</p>
+			<button class="btn btn-info">Remind me tomorrow</button>
+		</div>	
+		<div class="alert alert-info">
+			<button class="close" data-dismiss="alert">×</button>
+			<p>Reminder to review Dave's contract</p>
+			<button class="btn btn-info">Remind me tomorrow</button>
+		</div>		
+	  </div>
+	  <div class="modal-footer">
+		<a href="#" class="btn" data-dismiss="modal">Close</a>
+	  </div>
+	</div>	
 
     <!-- Le javascript
     ================================================== -->
