--- a/tpl/notificationsModal.html
+++ b/tpl/notificationsModal.html
@@ -1,26 +1,26 @@
 <div class="modal hide" id="notifications">
 	  <div class="modal-header">
-		<button type="button" class="close" data-dismiss="modal">×</button>
+		<button type="button" class="close" data-dismiss="modal">x</button>
 		<h3>Here's your notifications</h3>
 	  </div>
 	  <div class="modal-body">
 		<div class="alert">
-			<button class="close" data-dismiss="alert">×</button>
+			<button class="close" data-dismiss="alert">x</button>
 			<p>You've missed a scheduled end-of-shift cash off</p>
 			<button class="btn btn-warning">Cash off now</button>
 		</div>
 		<div class="alert">
-			<button class="close" data-dismiss="alert">×</button>
+			<button class="close" data-dismiss="alert">x</button>
 			<p>Next weeks rota is due today</p>
 			<button class="btn btn-warning">Make rota now</button>
 		</div>
 		<div class="alert alert-info">
-			<button class="close" data-dismiss="alert">×</button>
+			<button class="close" data-dismiss="alert">x</button>
 			<p>Reminder to settle papers from petty cash</p>
 			<button class="btn btn-info">Remind me tomorrow</button>
 		</div>	
 		<div class="alert alert-info">
-			<button class="close" data-dismiss="alert">×</button>
+			<button class="close" data-dismiss="alert">x</button>
 			<p>Reminder to review Dave's contract</p>
 			<button class="btn btn-info">Remind me tomorrow</button>
 		</div>		
