--- a/tpl/overviewTop.html
+++ b/tpl/overviewTop.html
@@ -3,7 +3,7 @@
 </div>
 <p>The numbers tell it how it realy is.</p>
 <div class="alert">
-	<button class="close" data-dismiss="alert">×</button>
+	<button class="close" data-dismiss="alert">x</button>
 	<p>You've missed a scheduled end-of-shift cash off</p>
 	<button class="btn btn-warning">Cash off now</button>
 </div>
