Append main views to single central div
will allow for different views to be rendered to the central area.
Header and Footer remain seperate.

--- a/backbone_index.html
+++ b/backbone_index.html
@@ -34,14 +34,9 @@
 	<div id="header"></div>
 
     <div class="container">
-		<div id="overview_top"></div>
-		<div id="sales_chart"></div>
-		<div id="traffic_light_stats"></div>
+		<div id="center"></div>
 		<div id="footer"></div>
     </div> <!-- /container -->
-	
-	<div id="notifications_modal"></div>
-	<div id="cashoff_modal"></div>	
 	
     <!-- Le javascript
     ================================================== -->
